name:               bach-expert
license:            BSD3
license-file:       LICENSE
author:             Thomas Bach
maintainer:         hacking@babibo.de
copyright:          2019 Thomas Bach                                        
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.13
  ghc-options:      -threaded
  default-language: Haskell2010
